2012-04-11 Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.

	* src/client/gsserverlist.h|.cpp: CamelCased and header called hpp.
	* src/client/gsogreguitest.h|.cpp: CamelCased and header called hpp.
	* src/client/gsmenubase.h|.cpp: CamelCased and header called hpp.
	* src/client/gsmainmenu.h|.cpp: CamelCased and header called hpp.
	* src/client/gscreateaccount.h|.cpp: CamelCased and header called hpp.
	* src/client/gsconnection.h|.cpp: CamelCased and header	called hpp.
	* src/client/exampleframelistener.h|.cpp: CamelCased and header
	called hpp.

2012-03-26 Jérôme Pasquier  <rainbru@free.fr>

	* src/maincore/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.

	* src/maincore/velocitycalculator.h|.cpp: CamelCased and header
	called hpp.
	* src/maincore/vcconstant.h|.cpp: CamelCased and header called hpp.
	* src/maincore/ogreimport.h: CamelCased and header called hpp.
	* src/maincore/keyboardnavigation.h|.cpp: CamelCased and header
	called hpp.
	* src/maincore/inputwrapper.h|.cpp: CamelCased and header called hpp.
	* src/maincore/highlightlistener.h|.cpp: CamelCased and header
	called hpp.
	* src/maincore/gslocaltest.h|.cpp: CamelCased and header called hpp.
	* src/maincore/gsgamebase.h|.cpp: CamelCased and header called hpp.
	* src/maincore/environmentsetup.h|.cpp: CamelCased and header called
	hpp.
	* src/maincore/dumpogreobject.h|.cpp: CamelCased and header called hpp.

2012-03-20 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.

	* src/common/xmltimestamp.h|.cpp: CamelCased and header called hpp.
	* src/common/xmlserverlist.h|.cpp: CamelCased and header called hpp.
	* src/common/xmlpersolist.h|.cpp: CamelCased and header called hpp.
	* src/common/xmloptions.h|.cpp: CamelCased and header called hpp.