@@ -36,7 +36,6 @@
 #include <XmlServerList.hpp>
 
 #include "GsMenuBase.hpp"
-#include "guimanager.h"
 #include "bglistener.h"
 
 #include <VcConstant.hpp>
