@@ -1,3 +1,13 @@
+2012-05-04 Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/Makefile.am (h_sources, cc_sources): Handles CamelCased
+	files and new header names.
+
+	* src/client/languageselector.h|.cpp: CamelCased and header called hpp.
+	* src/client/guimanager.h|.cpp: CamelCased and header called hpp.
+	* src/client/guiframelistener.h|.cpp: CamelCased and header called hpp.
+	* src/client/gsupdatedatafiles.h|.cpp: CamelCased and header called hpp.
+
 2012-04-11 Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/Makefile.am (h_sources, cc_sources): Handles CamelCased
